<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>it.unibz.inf.ontouml</groupId>
    <artifactId>ontouml-vp-plugin</artifactId>
    <version>0.5.2</version>

    <name>OntoUML 2 Plugin for Visual Paradigm</name>

    <profiles>
        <profile>
            <id>Windows</id>
            <activation>
                <os>
                    <family>Windows</family>
                </os>
            </activation>
            <properties>
                <script.executable>"${project.basedir}${file.separator}scripts${file.separator}run-vp.bat"
                </script.executable>
            </properties>
        </profile>
        <profile>
            <id>unix</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <script.executable>${project.basedir}${file.separator}scripts${file.separator}run-vp</script.executable>
            </properties>
        </profile>
    </profiles>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <visualparadigm.app.dir>
        </visualparadigm.app.dir>
        <visualparadigm.plugin.dir>
        </visualparadigm.plugin.dir>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.truth</groupId>
            <artifactId>truth</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.truth.extensions</groupId>
            <artifactId>truth-java8-extension</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.5</version>
        </dependency>

        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.openapi</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}openapi.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.vpplatform</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}vpplatform.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib01</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib01.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib02</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib02.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib03</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib03.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib04</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib04.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib05</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib05.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib06</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib06.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib07</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib07.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.lib09</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}lib09.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.jniwrap</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}jniwrap.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.lib.winpack</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}lib${file.separator}winpack.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.visualparadigm.app</groupId>
            <artifactId>com.visualparadigm.app.ormlib.orm</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${visualparadigm.app.dir}${file.separator}ormlib${file.separator}orm.jar</systemPath>
        </dependency>
    </dependencies>

    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptors>
                        <descriptor>assembly/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>assemble-vp-plugin</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>install-vp-plugin</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${visualparadigm.plugin.dir}/${project.artifactId}-${project.version}
                            </outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.directory}/classes</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>exec-maven-plugin</artifactId>
                <groupId>org.codehaus.mojo</groupId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>bash</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>${script.executable}</executable>
                    <arguments>
                        <argument>--appDir</argument>
                        <argument>${visualparadigm.app.dir}</argument>
                    </arguments>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>

    </build>
</project>